# aoc2024

./: aoc2024.opam  dune-project  next_puzzle.py  next_puzzle.sh
day1/: main.ml
day10/: dune  main.ml
day10_2/: dune  main.ml
day11/: dune  main.ml
day11_2/: dune  main.ml
day12/: dune  main.ml
day1_2/: dune  main.ml
day2/: main.ml
day2_2/: dune  main.ml
day3/: main.ml
day3_2/: dune  main.ml
day4/: dune  main.ml
day4_2/: dune  main.ml
day5/: dune  main.ml
day5_2/: dune  main.ml
day6/: dune  main.ml
day6_2/: dune  main.ml
day7/: dune  main.ml
day7_2/: dune  main.ml
day8/: dune  main.ml
day8_2/: dune  main.ml
day9/: dune  main.ml
day9_2/: dune  main.ml
lib/: aoc.ml  circularbuffer.ml  circularbuffer.mli  dune  grid.ml  grid.mli  main.ml  pqueue.ml  public.ml  pvector.ml  queue.ml  queue.mli  unionfind.ml  unionfind.mli  unionfindfunctor.ml  unionfindfunctor.mli  util.ml  util.mli
test/: test_aoc.ml
